<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeTopBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        android:background="@drawable/top_bar" 
        >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        
         <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/title_size"
            android:textColor="@color/white"
            android:text="@string/title" />
        
        <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textViewTitle"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="@dimen/subtitle_size"
            android:textColor="@color/subtitle"
            android:text="@string/subtitle" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linerTabBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_tab_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeTopBar"
        android:layout_marginTop="0dp"
        android:background="@drawable/tab_bar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/score" />

        <TextView
            android:id="@+id/textViewMpg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/mpg" />

        <TextView
            android:id="@+id/textViewFuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:text="@string/fuel" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_weight="1"
            android:text="@string/distance" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmment_conteiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linerTabBar" >

    </FrameLayout>
   
</RelativeLayout>